--- a/Workout-plan-app/src/components/Navbar/Navbar.css
+++ b/Workout-plan-app/src/components/Navbar/Navbar.css
@@ -1,25 +1,48 @@
-.logo {
-    height: 14em;
-    margin-left: 14rem;
-    width: 30%;
-    height: 30%;
+body, html {
+    margin: 0;
+    padding: 0;
+    background-color: black; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
+    text-align: center;
+    color: white;
 }
 
-.Navbar {
-    display: flex;
-    align-items: center;
-    position:fixed;
-    top: auto;
-}
 
 .container {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
-    height: 100vh; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 
+.logo {
+    width: 30%;
+    height: auto;
+}
+
+
+.auth-links {
+    margin-top: 20px; 
+}
+
+.auth-links a {
+    color: rgb(244, 244, 247);
+    font-size: 1.2rem;
+    margin: 0 15px;
+    text-decoration: none;
+    transition: color 0.3s ease, transform 0.2s ease; 
+}
+
+.auth-links a:hover {
+    color: #430beb; 
+    transform: scale(1.1);
+    text-decoration: underline;
+}
 
 
