--- a/Workout-plan-app/src/components/Footer/Footer.css
+++ b/Workout-plan-app/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #0d0d0e;
+    background-color: white;
     text-align: center;
     padding: 1rem 0;
     position: fixed;
@@ -8,10 +8,10 @@ footer {
 }
 
 footer a {
-    color: rgb(247, 243, 243);
+    color: black(247, 243, 243);
     text-decoration: none;
 }
 footer a:hover {
     text-decoration: underline;
-    color: #22057a;
+    color: #0e0e0f;
 }
