--- a/Workout-plan-app/src/index.css
+++ b/Workout-plan-app/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(247, 241, 241, 0.87);
-  background-color: #0d0d0e;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
