--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(247, 241, 241, 0.87);
-  background-color: white;
+  background-color: #2C2F33;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
