--- a/Pages/WorkoutPlansDetails/WorkoutPlansDetails.css
+++ b/Pages/WorkoutPlansDetails/WorkoutPlansDetails.css
@@ -12,4 +12,31 @@
     border-radius: 8px;
     background-color: #f9f9f9;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+}
+
+.workout-card a {
+    margin-bottom: 10px; 
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column; 
+    gap: 10px; 
+    margin-top: 10px; 
+}
+
+.delete-button {
+    background-color: rgb(21, 20, 20);
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.delete-button:hover {
+    background-color: rgb(177, 15, 15);
 }
