--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,24 @@
-footer {
-    background-color: white;
+.footer {
+    background-color: #2C2F33;
     text-align: center;
     padding: 1rem 0;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    left: 0; 
+    width: 100%; 
+    color: white;
+    font-size: 16px;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
 }
 
-footer a {
-    color: black(247, 243, 243);
-    text-decoration: none;
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
 }
-footer a:hover {
-    text-decoration: underline;
-    color: #0e0e0f;
+
+.content {
+    flex: 1;
+    padding-bottom: 60px; 
 }
