--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,18 @@
-.logo {
-    height: 14em;
-    margin-left: 20rem;
-    width: 30%;
-    height: 30%;
-}
 .navbar {
     display: flex;
     align-items: center;
+    height: 4em;
+    padding: 0 1rem;
+    padding-bottom: 100px; 
 }
+
 .navbar h1 {
     color: #121111;
+    font-size: 3em; 
+    margin-right: 1rem; 
+}
+
+.logo {
+    height: 8em; 
+    width: auto; 
 }
