--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,10 +1,11 @@
-/* Add margin-top to create space between the navbar and the video */
 .home-page {
-    margin-top: 80px; /* Adjust this value to fit the height of your navbar */
+    margin-top: 80px; 
+    padding-bottom: 300px; 
 }
 
 video {
     width: 100%;
-    border-radius: 8px; /* Optional, adds rounded corners */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional, adds shadow */
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 50px;
 }
