--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,6 +1,9 @@
 .home-page {
+    background-image: url('../../assets/Arena2.png');
+    background-size: cover;
     margin-top: 80px; 
     padding-bottom: 300px; 
+
 }
 
 video {
