--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,69 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
 
-
 .landing-page {
-    position: relative;
-    width: 100vh;
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100vw;
     height: 100vh;
-    background-image: url('../../assets/Arena2.png'); 
+    background-image: url('../../assets/risen-wang-20jX9b35r_M-unsplash.jpg'); 
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+}
+.form-container {
+    width: 100%;
+    max-width: 400px; 
+    background: rgba(0, 0, 0, 0.6); 
+    padding: 20px;
+    border-radius: 10px;
+    
+  
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    color: #fff;
-    text-align: center;
-    padding: 0 20px;
 }
 
-.landing-page-content {
-    max-width: 100%;
-    margin: 0 auto;
-}
 
-.landing-title {
-    font-size: 3rem;
-    margin-bottom: 20px;
-    font-family: 'Lora', serif;
-    font-weight: bold;
-}
-
-.landing-description {
-    font-size: 1.2rem;
-    margin-bottom: 30px;
-    font-family: 'Arial', sans-serif;
-    opacity: 0.8;
-}
-
-.landing-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.landing-btn {
-    text-decoration: none;
-    padding: 15px 30px;
+input {
+    width: 100%; 
+    padding: 10px;
+    margin: 10px 0;
+    border: none;
     border-radius: 5px;
-    font-size: 1rem;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-.login-btn {
-    background-color: #07090c;
-    color: white;
-}
-
-.login-btn:hover {
-    background-color: #0cc70c;
-}
-
-.sign-up-btn {
-    background-color: #07090c;
-    color: white;
-}
-
-.sign-up-btn:hover {
-    background-color: #0f8c32;
 }
